--- a/package.json
+++ b/package.json
@@ -5,25 +5,31 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "axios": "^0.19.0",
     "chartist": "0.10.1",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "history": "4.7.2",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
     "nouislider": "13.1.0",
+    "number-flip": "^1.1.8",
     "perfect-scrollbar": "1.4.0",
-    "react": "16.8.1",
+    "react": "16.10.2",
     "react-big-calendar": "0.20.3",
     "react-bootstrap-sweetalert": "4.4.1",
     "react-chartist": "0.13.3",
+    "react-confetti": "^5.0.1",
     "react-datetime": "2.16.3",
-    "react-dom": "16.8.1",
+    "react-dom": "16.10.2",
     "react-google-maps": "9.4.5",
     "react-jvectormap": "0.0.6",
+    "react-roulette-game": "^1.0.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.5",
     "react-swipeable-views": "0.13.1",
     "react-table": "6.9.2",
-    "react-tagsinput": "3.19.0"
+    "react-tagsinput": "3.19.0",
+    "react-use": "^13.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
