--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "16.10.2",
     "react-google-maps": "9.4.5",
     "react-jvectormap": "0.0.6",
-    "react-roulette-game": "^1.0.1",
+    "react-roulette-game": "1.0.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.5",
     "react-swipeable-views": "0.13.1",
