--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-sweetalert": "4.4.1",
     "react-chartist": "0.13.3",
     "react-confetti": "^5.0.1",
+    "react-datepicker": "^2.10.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.10.2",
     "react-google-maps": "9.4.5",
