--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "@material-ui/styles": "^4.7.1",
     "axios": "^0.19.0",
     "chartist": "0.10.1",
+    "clsx": "^1.0.4",
     "eslint-plugin-react-hooks": "^2.2.0",
     "history": "4.7.2",
     "moment": "2.24.0",
